@@ -1,4 +1,8 @@
-Fri Feb 26 16:11:44 1999  msolomon  <msolomon@fido.seva.net>
+Fri Feb 26 16:41:48 1999  msolomon  <msolomon@fido.seva.net>
+
+	* t.pl, WeatherNOAA.pm:
+	Thanks to Timothy Kimball <kimball@stsci.edu>, fixed bug in Relitive
+	Humidity where 100% would be reparted as 00%
 
 	* WeatherNOAA.pm, t.pl: Per Pat Ludwig, fixed the proxy bug
 
